--- a/Assignment_04/working-area/Dockerfile-test/index.html
+++ b/Assignment_04/working-area/Dockerfile-test/index.html
@@ -63,7 +63,7 @@
       // --- 🔑 SECURITY WARNING 🔑 ---
       // Your API key is exposed here. For a real application, you must 
       // hide this key by using a secure backend to make the API call.
-      const apiKey = "AIzaSyAhjAEa9qtT9pXZPGKQ-NVuLX5n2byH65U"; 
+      const apiKey = "<your api key>"; 
       const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash-latest:generateContent?key=${apiKey}`;
 
       const payload = {
